--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "angular-expressions": "^1.1.9",
+    "docxtemplater": "^3.37.12",
     "framer-motion": "^10.12.18",
     "nanoid": "^4.0.2",
+    "pizzip": "^3.1.4",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
