--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "use-immer": "^0.9.0"
   },
   "scripts": {
