--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "angular-expressions": "^1.1.9",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.6",
     "docxtemplater": "^3.37.12",
     "framer-motion": "^10.12.18",
     "nanoid": "^4.0.2",
