--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-pwa-assets": "pwa-assets-generator"
   },
   "browserslist": {
     "production": [
@@ -40,11 +41,13 @@
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@vite-pwa/assets-generator": "^0.0.3",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.44.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.2"
+    "vite": "^4.4.2",
+    "vite-plugin-pwa": "^0.16.4"
   }
 }
